<resources>
    <string name="app_name">爱耳目摄像机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tip_conning_baidu">正在获取数据,请稍候</string>
    <string name="login_baidu">使用百度账号登录</string>
    <string name="login_mail">邮箱登录</string>
    <string name="have_look">随便看看</string>
    <string name="login">登录</string>
    <string name="fast_registration">快速注册</string>
    <string name="input_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="input_mail">邮箱不能为空</string>
    <string name="mail_error">邮箱格式不正确</string>
    <string name="input_nick">用户名不能为空</string>
    <string name="mail_password">密码不能为空</string>
    <string name="register_input_nickname">请输入昵称</string>
    <string name="user_agreement">点击“注册”按钮，代表您已阅读并同意用户协议</string>
    <string name="nickname_failed">用户名无效</string>
    <string name="nickname_disable">用户名被禁用</string>
    <string name="nickname_badword">此昵称不合法，请重新填写</string>
    <string name="nickname_exits">此昵称已被占用，请重新填写</string>
    <string name="mail_access_illegal">此邮箱已被禁用，请联系爱耳目客服(support@iermu.com)</string>
    <string name="mail_exits">此邮箱已被注册，请直接登录</string>
    <string name="register_faild">注册失败，请稍候再试</string>
    <string name="account_password_error">账号或密码错误</string>
    <string name="login_fail_try_again">登录失败，请稍候再试</string>
    <string name="find_password">找回密码</string>
    <string name="user_agree">用户协议</string>
    <string name="no_binding">未绑定</string>
    <string name="bind_baidu">绑定百度账号</string>
    <string name="or">或</string>
    <string name="user_agreement_txt">用户协议</string>
    <string name="token_invalid">授权已失效，请重新登录百度帐号并授权…</string>
    <string name="nick_name_length">请输入4-20个字符</string>
    <string name="password_update">您的密码已修改，请重新登录</string>
    <string name="password_lass">密码长度不足6位</string>
    <string name="experience">体验</string>
    <string name="maintab_iermu">我的摄像机</string>
    <string name="maintab_message">消息</string>
    <string name="maintab_public">公共频道</string>
    <string name="maintab_personal">个人</string>
    <string name="add_devices_txt">摄像机添加向导</string>
    <string name="conn_wifi_txt">摄像机连接WiFi</string>
    <string name="update_wifi_txt">更改WiFi</string>
    <string name="conn_dev_txt">连接摄像机</string>
    <string name="cancle_txt">取消</string>
    <string name="high_grade">高级</string>
    <string name="select_devices_txt">选择您要添加的摄像机</string>
    <string name="looking_for_devices">正在努力查找新的摄像机</string>
    <string name="connect_power_txt">请确保新摄像机连通电源</string>
    <string name="hold_time">整个连接过程大约需要1分钟，请耐心等待</string>
    <string name="conn_server_txt">正在努力连接路由器</string>
    <string name="conn_cloud_server_txt">正在努力连接云服务器</string>
    <string name="conn_vedio_server_txt">正在连接视频服务器</string>
    <string name="account_txt">请输入用户名</string>
    <string name="register_txt">正在效验，请稍候片刻</string>
    <string name="start_config_txt">开始配置</string>
    <string name="account_or_pass_empty">账号或密码不能为空</string>
    <string name="account_empty">账号不能为空</string>
    <string name="conn_devices_fail">连接摄像机失败</string>
    <string name="conn_dev_wifi_ok">我已连接上摄像机的WiFi</string>
    <string name="back_iermu">返回首页</string>
    <string name="other_regiter">被其他用户注册</string>
    <string name="quit_add_dev">退出添加摄像机</string>
    <string name="quit_add_content">你确定要退出添加摄像机吗?</string>
    <string name="quit_add_confrim">继续等待</string>
    <string name="quit_cancle">退出</string>
    <string name="rescancam_txt">重新配置</string>
    <string name="devices_name">我的摄像机</string>
    <string name="how_find_dev">如何找到设备号？</string>
    <string name="check_cam_environment">摄像机配置环境？</string>
    <string name="smart_wifi_nomatch">摄像机配置的Wifi与手机连接Wifi需要保持一致，请重新配置摄机的Wifi</string>
    <string name="smart_timeout">摄像机已配置超时，请重新配置摄像机</string>
    <string name="change_wifi">如何更改WiFI?</string>
    <string name="help_to_wifi_one">1.在无线局域网中连接iermu开头的WiFi</string>
    <string name="help_to_wifi_two">2.粘贴密码(WiFi密码已经复制)密码为:\ncmsiermu2013</string>
    <string name="help_to_wifi_three">3.连接摄像机的WiFi的热点成功后，切回爱耳\n目摄像机App</string>
    <string name="push">提交中</string>
    <string name="connect_dev">连接爱耳目智能摄像机</string>
    <string name="connect_dev_text_one">60秒连接摄像机，打开手机就能看到父母，宝宝和 \n 萌宠。家的温馨，从此如此清晰，如此亲近。</string>
    <string name="connect_cam">连接摄像机</string>
    <string name="buy_dev">购买摄像机</string>
    <string name="connect_dev_err">连接摄像机失败</string>
    <string name="repeat_add">重新添加</string>
    <string name="return_first">返回首页</string>
    <string name="find_dev">找到</string>
    <string name="find_no_dev">没有找到摄像机</string>
    <string name="net_exception">您的网络可能有点问题</string>
    <string name="change_another_add_type">换一种方式添加</string>
    <string name="at_once_connect">立即连接</string>
    <string name="cam_dev">台摄像机</string>
    <string name="find_cam">如何找到设备号？</string>
    <string name="cam_already_register">此摄像机已被其他用户注册</string>
    <string name="register_cloud_server_error">注册云服务器失败</string>
    <string name="help_me_find_dev">帮我找到设备号</string>
    <string name="cam_desvid_one">1.摄像机支架上的设备号</string>
    <string name="cam_desvid_two">2.包装底部的设备号</string>
    <string name="know">我知道了</string>
    <string name="goto_configre">去配置</string>
    <string name="check_cam">请查看摄像机是否</string>
    <string name="red_blue">红蓝灯交替闪烁</string>
    <string name="have_red_blue">看到红蓝灯交替闪烁</string>
    <string name="no_red_blue">没有看到红蓝灯闪烁？</string>
    <string name="have_and_add_cam">如果您有爱耳目摄像机，您可以在\n此使用手机添加</string>
    <string name="iermu_home_cam_txt">欢迎使用爱耳目智能摄像机</string>
    <string name="leave_home_far">离家再远，打开手机就能看见父母、宝\n宝和萌宠！</string>
    <string name="add_success">恭喜添加成功</string>
    <string name="change_name">给摄像机起个响亮的名字吧</string>
    <string name="conn_wifi">准备连接WiFi</string>
    <string name="update_wifi">更改WiFi</string>
    <string name="select_wifi_txt">请选择WiFi</string>
    <string name="hide_pass_txt">隐藏密码</string>
    <string name="input_pass_txt">请输入8－31位密码</string>
    <string name="show_pass">显示密码</string>
    <string name="hide_pass">隐藏密码</string>
    <string name="conn_dev_wifi">请在无线局域网中选择名称 \n 为iermu的无线WiFi</string>
    <string name="how_update_wifi">如何更改WiFi?</string>
    <string name="pass_lenth">密码至少8位最多31位</string>
    <string name="manual_configuration">手动配置</string>
    <string name="manual_get_ip">手动获取IP地址</string>
    <string name="ip_address">IP地址:    </string>
    <string name="subnet_mask">子网掩码:</string>
    <string name="default_gateway">默认网关:</string>
    <string name="conn_select_wifi">为摄像机选择要连接的WiFi</string>
    <string name="goto_connect">去连接</string>
    <string name="wifi">的WiFi</string>
    <string name="advance_text">高级</string>
    <string name="conn_dev_wifi_text">摄像机连接WiFi</string>
    <string name="register_notpermission">此摄像机已被其他用户注册</string>
    <string name="register_fail">注册云服务器失败</string>
    <string name="conn_dev_text">连接摄像机</string>
    <string name="current_conn_cloud">正在努力连接云服务器</string>
    <string name="register_cloud_success">注册云服务器成功.</string>
    <string name="registed_cloud">摄像机已注册云服务器.</string>
    <string name="register_cloud_fail">注册云服务器失败.</string>
    <string name="registed_device">此摄像机已被其他用户注册.</string>
    <string name="current_config_parameter">正在配置设备参数.</string>
    <string name="config_parameter_success">配置设备参数成功.</string>
    <string name="config_parameter_fail">配置摄像机超时, 请检查摄像机状态灯.</string>
    <string name="hiwifi_connect_timeout">配置摄像机超时, 请重试.</string>
    <string name="no_permission">没有该设备权限.</string>
    <string name="config_parameter_try">配置摄像机参数失败, 请尝试重试.</string>
    <string name="check_online">检测摄像机是否上线.</string>
    <string name="setup_success">安装摄像机成功.</string>
    <string name="setup_fail">连接摄像机超时.</string>
    <string name="connect_dev_fail">连接摄像机热点失败, 请尝试开启手动配置</string>
    <string name="connect_wifi_fail">连接摄像机失败, 请检查Wifi网络状态.</string>
    <string name="get_hiwifi_ip_fail">获取摄像机ip失败,请重新配置摄像机.</string>
    <string name="update_description">摄像机名称设置失败</string>
    <string name="add_guide">摄像机添加向导</string>
    <string name="current_wifi_state">当前网络不处于WiFi状态</string>
    <string name="update_wifi_text">更改WiFi</string>
    <string name="no_network">网络不给力</string>
    <string name="prepare_conn_dev">准备连接摄像机</string>
    <string name="red_blue_text">红蓝灯没有交替闪烁？</string>
    <string name="reset_dev">重置摄像机</string>
    <string name="find_void">已经听到了提示音</string>
    <string name="reset_cam_tip1">请用顶针插入配置孔 5秒 以上</string>
    <string name="reset_cam_tip2">请用手指长按配置按钮 5秒 以上</string>
    <string name="reset_cam_tip3">直到听到 滴滴两声</string>
    <string name="share_println">快和好友分享你的精彩截图吧</string>
    <string name="fluency">流畅</string>
    <string name="super_clear">超清</string>
    <string name="bitmap_save">截图已经保存到sd/cache中</string>
    <string name="double_touch">双击画面，点哪转哪儿</string>
    <string name="have_end">已经转到头啦！</string>
    <string name="wait_connecting_cam">正在连接摄像机, 请稍候</string>
    <string name="repeat_connecting_cam">重新连接摄像机, 请稍候</string>
    <string name="please_check_network">网络不给力，请检查网络设置</string>
    <string name="cam_off_ine">摄像机离线了</string>
    <string name="cam_turn_off">摄像机关机了</string>
    <string name="disconnect_cam">断开摄像机连接中</string>
    <string name="connect_out_time">连接摄像机超时</string>
    <string name="use_location">常用位置</string>
    <string name="automatic_switch">自动旋转</string>
    <string name="wait_load">正在加载，请稍候</string>
    <string name="check_wifi">请检查摄像机电源是否插好，连接的wifi能否上网</string>
    <string name="use_3G_4G">正在使用3G/4G网络，可能会产生流量费用</string>
    <string name="need_switch">画面有点卡，切换到流畅模式</string>
    <string name="switch_now">立即切换</string>
    <string name="time_axis">时间轴</string>
    <string name="morning">早上好</string>
    <string name="noon">下午好</string>
    <string name="evening">晚上好</string>
    <string name="delete_succeed">删除成功</string>
    <string name="dev_is_not">设备不存在</string>
    <string name="auth_err">删除授权设备失败</string>
    <string name="network_error">网路异常</string>
    <string name="delete_error">删除失败</string>
    <string name="delete_cam">删除摄像机</string>
    <string name="delete_sure">是否确定删除摄像机</string>
    <string name="sure">确定</string>
    <string name="deleteing_dev">正在删除设备</string>
    <string name="over_auth_family">已授权%1$d人</string>
    <string name="gain">获得</string>
    <string name="shared">分享的</string>
    <string name="dev_name">摄像机名称</string>
    <string name="accept_invite">接受邀请</string>
    <string name="cancle">取消</string>
    <string name="save_direction">收藏方向</string>
    <string name="location">给经常看的位置起个名，如阳台、门口等</string>
    <string name="door">门口</string>
    <string name="window">窗户</string>
    <string name="parlour">客厅</string>
    <string name="check_use_location">点击查看常用位置</string>
    <string name="start_switch">点击开始旋转</string>
    <string name="stop_switch">点击停止旋转</string>
    <string name="long_touch">长按“直播画面”，保存常用位置</string>
    <string name="cloud_overdue">您的云录制服务已经过期</string>
    <string name="cloud_one">购买云录制之后，自动存储移动视频到百度云</string>
    <string name="cloud_two">支持精彩片段一键剪辑到百度云</string>
    <string name="cloud_three">支持手机、电脑、查看录像和直播</string>
    <string name="at_once_buy">立即购买</string>
    <string name="work_time">工作时间: 每天9:00-12:00，13:00-21:00</string>
    <string name="cell_number">呼叫 400-8988-800</string>
    <string name="cloud_have_start">云录制已经开启</string>
    <string name="record_one">摄像机将画面变化视频传到百度云</string>
    <string name="record_two">7天云录像服务</string>
    <string name="save">保存</string>
    <string name="into_public_channel">进入公共频道看看</string>
    <string name="no_find_cam">没有找到新的爱耳目摄像机</string>
    <string name="power_line">1.请确保电源数据线插好；</string>
    <string name="reset_cam">2.复位摄像机：请用顶针轻插摄像机背面的[Reset]孔，按住1秒后松。（顶针在包装盒内）</string>
    <string name="light_blink">3.等待指示灯变为红蓝交替闪烁，可再次添加摄像机。</string>
    <string name="contact_us">4.其他问题，您可以通过以下方式联系我们：</string>
    <string name="service_phone">客服电话 ：</string>
    <string name="wechat_sina_iermu">微信/微博：爱耳目</string>
    <string name="i_know">知道了</string>
    <string name="start_add">开始添加</string>
</resources>