<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:scrollbars="none"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/no_find_cam"
            android:textSize="18sp"
            android:textColor="@color/conn_txt"
            android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#b4b4b4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:textSize="14sp"
            android:layout_marginLeft="18dp"
            android:paddingRight="18dp"
            android:textColor="@color/conn_txt"
            android:text="@string/power_line"
            android:drawableBottom="@drawable/setting_power"
            android:drawablePadding="11dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textSize="14sp"
            android:layout_marginLeft="18dp"
            android:paddingRight="18dp"
            android:textColor="@color/conn_txt"
            android:text="@string/reset_cam"
            android:drawableBottom="@drawable/setting_reset"
            android:drawablePadding="11dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textSize="14sp"
            android:layout_marginLeft="18dp"
            android:paddingRight="18dp"
            android:textColor="@color/conn_txt"
            android:text="@string/light_blink"
            android:drawableBottom="@drawable/add_img_fail_3"
            android:drawablePadding="11dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textSize="14sp"
            android:layout_marginLeft="18dp"
            android:paddingRight="18dp"
            android:padding="5dp"
            android:textColor="@color/conn_txt"
            android:text="@string/contact_us"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_phone"
                android:textSize="14sp"
                android:layout_marginLeft="18dp"
                android:paddingRight="18dp"
                android:padding="5dp"
                android:textColor="@color/conn_txt"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/offical_phone"
                android:textSize="14sp"
                android:textColor="@color/mycam_talk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="400-8988-800"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wechat_sina_iermu"
            android:textSize="14sp"
            android:layout_marginLeft="18dp"
            android:paddingRight="18dp"
            android:padding="5dp"
            android:textColor="@color/conn_txt"
            android:gravity="center_vertical"/>
        <Button
            android:id="@+id/knowledge_btn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/devices_help_btn_bg"
            android:textColor="@color/devices_help_btn_bg"
            android:text="@string/i_know"/>
    </LinearLayout>

</ScrollView>